--- a/manager-api/package.json
+++ b/manager-api/package.json
@@ -11,9 +11,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.4",
     "express": "~4.16.1",
     "express-jwt": "^5.3.3",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
